# bug-tracker

./: .gitignore  pyproject.toml
backend/: urls.py
bugtracker/: asgi.py  settings.py  urls.py  wsgi.py
bugtracker/templates/: index.html
frontend/: config-overrides.js  package.json  webpack-stats.json
frontend/src/components/App/: App.tsx
frontend/src/components/App/__test__/: App.test.tsx
frontend/src/components/Login/: Login.tsx
frontend/src/components/ProjectsList/: ProjectsList.tsx
frontend/src/components/ProjectsList/Project/: Project.tsx
frontend/src/components/ProjectsList/__test__/: ProjectsList.test.tsx
